로그인 화면 추가 및 데이터베이스를 위한 유저 클래스 생성

--- a/src/main/chungmu/public/index.html
+++ b/src/main/chungmu/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <audio id="globalAudio" class="audios" controls=""></audio>
+    <audio id="globalAudio" class="audios" controls="" autoplay style="display: none;"></audio>
   </body>
 </html>
   
