음악 컨트롤 버튼들 기능 추가(플레이,재생목록)

--- a/src/main/chungmu/public/index.html
+++ b/src/main/chungmu/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <audio id="globalAudio" class="audios" controls="" autoplay style="display: none;"></audio>
+    <audio id="globalAudio" class="audios" onloadstart="this.volume=0.1" controls="" autoplay style="display: none;"></audio>
   </body>
 </html>
   
